--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/siem_dashboard
+MONGODB_URI=mongodb+srv://monika:Monika18@siem-cluster.gt3cp09.mongodb.net/?retryWrites=true&w=majority&appName=SIEM-CLUSTER
 PORT=5000
 NODE_ENV=development
