--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI=mongodb+srv://monika:Monika18@siem-cluster.gt3cp09.mongodb.net/test?retryWrites=true&w=majority&appName=SIEM-CLUSTER
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
